--- a/index.html
+++ b/index.html
@@ -8,55 +8,135 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
     <title>Studio</title>
   </head>
   <body>
-    <!--------------------------------------------------------- [HEADER] -------------------------------------------------------->
+    <!--------------------------------------------------- [HEADER] -------------------------------------------------->
     <header class="header">
-      <div class="container header-container">
-        <nav class="header-navigation">
-          <a class="link logo-invariable-part" href="./index.html"
-            >Web<span class="logo-dark-part">Studio</span></a
-          >
-          <ul class="list menu">
-            <li class="menu-item">
-              <a class="link menu-link menu-current-page" href="./index.html">Studio</a>
+      <div class="header-container">
+        <a class="link logo-invariable-part" href="./index.html"
+          >Web<span class="logo-dark-part">Studio</span></a
+        >
+        <button type="button" class="mobile-menu-open-btn" mobile-menu-open>
+          <svg class="open-btn-icon" width="29.5" height="18.5">
+            <use href="./images/icons.svg#icon-openner"></use>
+          </svg>
+        </button>
+        <ul class="list header-menu">
+          <li class="header-menu-item">
+            <a class="link header-menu-link header-menu-current-page" href="./index.html">Studio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="link header-menu-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-menu-item"><a class="link header-menu-link" href="">Contacts</a></li>
+        </ul>
+        <address class="header-address">
+          <ul class="list header-contact-list">
+            <li class="header-contact-item">
+              <a class="link header-contact-link mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="menu-item">
-              <a class="link menu-link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="menu-item"><a class="link menu-link" href="">Contacts</a></li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="list contact-list">
-            <li class="contact-item">
-              <a class="link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="contact-item">
-              <a class="link contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="header-contact-item">
+              <a class="link header-contact-link tel" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
+        <!-------------------------------------------- HEADER-MOBILE MENU ------------------------------------------->
+
+        <div class="mobile-menu is-hidden" mobile-menu>
+          <div class="mobile-menu-nav">
+            <button type="button" class="close-modal-btn" mobile-menu-close>
+              <svg class="close-modal-icon" width="8" height="8">
+                <use href="./images/icons.svg#close-modal-icon"></use>
+              </svg>
+            </button>
+            <ul class="list mobile-menu-list">
+              <li class="mobile-menu-item">
+                <a class="link mobile-menu-link" href="./index.html">Studio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="link mobile-menu-link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="link mobile-menu-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </div>
+          <address class="mobile-menu-address">
+            <ul class="list mobile-contact-list">
+              <li class="mobile-contact-item">
+                <a class="link mobile-contact-link mobile-menu-tel" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mobile-contact-item">
+                <a
+                  class="link mobile-contact-link mobile-menu-mail"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-contact-item">
+                <ul class="list mobile-menu-media-set">
+                  <li class="mobile-menu-media-item">
+                    <a href="" class="link mobile-menu-media-link">
+                      <svg class="social-network-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="mobile-menu-media-item">
+                    <a href="" class="link mobile-menu-media-link">
+                      <svg class="social-network-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="mobile-menu-media-item">
+                    <a href="" class="link mobile-menu-media-link">
+                      <svg class="social-network-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="mobile-menu-media-item">
+                    <a href="" class="link mobile-menu-media-link">
+                      <svg class="social-network-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </header>
-    <!---------------------------------------------------------- [MAIN] --------------------------------------------------------->
+    <!---------------------------------------------------- [MAIN] --------------------------------------------------->
     <main>
-      <!------------------------------------------------------ HERO-SECTION ----------------------------------------------------->
-      <section class="hero-section">
+      <!------------------------------------------------ HERO-SECTION ----------------------------------------------->
+      <section class="section hero-section">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <h1 class="section-title hero-title">Effective Solutions for Your Business</h1>
           <button class="basic-button" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
-      <!--------------------------------------------------- ADVANTAHES SECTION -------------------------------------------------->
+      <!--------------------------------------------- ADVANTAHES SECTION -------------------------------------------->
       <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Our advantages</h2>
@@ -112,7 +192,7 @@
           </ul>
         </div>
       </section>
-      <!---------------------------------------------------- SERVICES SECTION --------------------------------------------------->
+      <!---------------------------------------------- SERVICES SECTION --------------------------------------------->
       <section class="services-section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
@@ -147,14 +227,15 @@
           </ul>
         </div>
       </section>
-      <!----------------------------------------------------- OUR TEAM SECTION -------------------------------------------------->
-      <section class="section dark-theme-section">
-        <div class="container">
+      <!------------------------------------------------- TEAM SECTION ---------------------------------------------->
+      <section class="team-section">
+        <div class="container-mini">
           <h2 class="section-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-member-card">
               <img
-                src="./images/product_designer.jpg"
+                srcset="./images/product-designer-1x.jpg 1x, ./images/product-designer-2x.jpg 2x"
+                src="./images/product-designer-1x.jpg"
                 alt="Our Product Designer"
                 width="264"
                 height="260"
@@ -196,7 +277,11 @@
             </li>
             <li class="team-member-card">
               <img
-                src="./images/frontend_developer.jpg"
+                srcset="
+                  ./images/frontend-developer-1x.jpg 1x,
+                  ./images/frontend-developer-2x.jpg 2x
+                "
+                src="./images/frontend-developer-1x.jpg"
                 alt="Our Frontend Developer"
                 width="264"
                 height="260"
@@ -238,7 +323,11 @@
             </li>
             <li class="team-member-card">
               <img
-                src="./images/marketing_specialist.jpg"
+                srcset="
+                  ./images/marketing-specialist-1x.jpg 1x,
+                  ./images/marketing-specialist-2x.jpg 2x
+                "
+                src="./images/marketing-specialist-1x.jpg"
                 alt="Our Marketing Specialist"
                 width="264"
                 height="260"
@@ -279,7 +368,13 @@
               </div>
             </li>
             <li class="team-member-card">
-              <img src="./images/ui_designer.jpg" alt="Our UI Designer" width="264" height="260" />
+              <img
+                srcset="./images/ui-designer-1x.jpg 1x, ./images/ui-designer-2x.jpg 2x"
+                src="./images/ui-designer-1x.jpg"
+                alt="Our UI Designer"
+                width="264"
+                height="260"
+              />
               <div class="team-member-data">
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="team-member-position">UI Designer</p>
@@ -318,9 +413,9 @@
           </ul>
         </div>
       </section>
-      <!--------------------------------------------------- CUSTOMERS SECTION --------------------------------------------------->
+      <!--------------------------------------------- CUSTOMERS SECTION --------------------------------------------->
       <section class="customers-section">
-        <div class="container">
+        <div class="container customers-container">
           <h2 class="section-title">Customers</h2>
           <ul class="list customer-list">
             <li class="customer-item">
@@ -370,10 +465,10 @@
       </section>
     </main>
 
-    <!---------------------------------------------------------- FOOTER --------------------------------------------------------->
+    <!---------------------------------------------------- FOOTER --------------------------------------------------->
 
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="footer-container">
         <!------------------------ [FOOTER LEFT PART] -------------------------->
 
         <div class="left-footer-part-container">
@@ -526,6 +621,7 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal-window.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
