--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Studio</title>
   </head>
   <body>
-    <!--------------------------------------------------- [HEADER] -------------------------------------------------->
+    <!-------------------------------------------------- [HEADER] ------------------------------------------------->
     <header class="header">
       <div class="header-container">
         <a class="link logo-invariable-part" href="./index.html"
@@ -55,7 +55,7 @@
             </li>
           </ul>
         </address>
-        <!-------------------------------------------- HEADER-MOBILE MENU ------------------------------------------->
+        <!------------------------------------------- HEADER-MOBILE MENU ------------------------------------------->
 
         <div class="mobile-menu is-hidden" mobile-menu>
           <div class="mobile-menu-nav">
@@ -127,16 +127,16 @@
         </div>
       </div>
     </header>
-    <!---------------------------------------------------- [MAIN] --------------------------------------------------->
+    <!--------------------------------------------------- [MAIN] --------------------------------------------------->
     <main>
-      <!------------------------------------------------ HERO-SECTION ----------------------------------------------->
+      <!----------------------------------------------- HERO-SECTION ----------------------------------------------->
       <section class="section hero-section">
         <div class="container">
           <h1 class="section-title hero-title">Effective Solutions for Your Business</h1>
           <button class="basic-button" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
-      <!--------------------------------------------- ADVANTAHES SECTION -------------------------------------------->
+      <!-------------------------------------------- ADVANTAHES SECTION -------------------------------------------->
       <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Our advantages</h2>
@@ -192,7 +192,7 @@
           </ul>
         </div>
       </section>
-      <!---------------------------------------------- SERVICES SECTION --------------------------------------------->
+      <!--------------------------------------------- SERVICES SECTION --------------------------------------------->
       <section class="section services-section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
@@ -230,7 +230,7 @@
           </ul>
         </div>
       </section>
-      <!------------------------------------------------- TEAM SECTION ---------------------------------------------->
+      <!------------------------------------------------ TEAM SECTION ---------------------------------------------->
       <section class="team-section">
         <div class="container-mini">
           <h2 class="section-title">Our Team</h2>
@@ -416,9 +416,9 @@
           </ul>
         </div>
       </section>
-      <!--------------------------------------------- CUSTOMERS SECTION --------------------------------------------->
+      <!-------------------------------------------- CUSTOMERS SECTION --------------------------------------------->
       <section class="customers-section">
-        <div class="container customers-container">
+        <div class="customers-container">
           <h2 class="section-title">Customers</h2>
           <ul class="list customer-list">
             <li class="customer-item">
@@ -468,10 +468,10 @@
       </section>
     </main>
 
-    <!---------------------------------------------------- FOOTER --------------------------------------------------->
+    <!--------------------------------------------------- FOOTER --------------------------------------------------->
 
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="footer-container">
         <!------------------------ [FOOTER LEFT PART] -------------------------->
 
         <div class="left-footer-part-container">
@@ -534,7 +534,7 @@
               required
             />
             <button class="signup-button" type="submit">
-              <p class="signup-button-title">Subscribe</p>
+              Subscribe
               <svg class="signup-icon" width="18" height="18">
                 <use href="./images/icons.svg#sign-up-icon"></use>
               </svg>
