Installed right padding-top to Services section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
       </section>
       <!--------------------------------------------- SERVICES SECTION --------------------------------------------->
-      <section class="section services-section">
+      <section class="services-section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list service-list">
