Centered the filter on the Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,9 +132,9 @@
     </header>
     <!---------------------------------------------------- [MAIN] --------------------------------------------------->
     <main>
-      <!----------------------------------------- PORTFOLIO PROJECTS FILTER ----------------------------------------->
+      <!----------------------------------------- PORTFOLIO PROJECT FILTER ----------------------------------------->
       <section class="portfolio-section">
-        <div class="filter-container">
+        <div class="container">
           <h1 class="section-title visually-hidden">Portfolio of our web-studio</h1>
           <ul class="list project-category-list">
             <li class="project-category">
@@ -153,7 +153,6 @@
               <button class="portfolio-button" type="button">Marketing</button>
             </li>
           </ul>
-        </div>
         <!------------------------------------------ PORTFOLIO PROJECT SET ----------------------------------------->
         <ul class="container list project-list">
           <li class="project-card">
